--- a/conf/application.conf
+++ b/conf/application.conf
@@ -215,3 +215,6 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
+# Trombine config
+trombine.title=Trombine rocks
+trombine.baseline=What baseline??
