add Organization form

--- a/test/data.yml
+++ b/test/data.yml
@@ -17,3 +17,9 @@ Person(toto):
         firstName: Toto
         lastName: Dupont
         organization: child
+
+Person(tutu):
+        email: tutu@example.com
+        firstName: Tutu
+        lastName: Dopont
+        organization: child
