--- a/conf/application.conf
+++ b/conf/application.conf
@@ -215,6 +215,9 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
+# Import the crud module
+module.crud=${play.path}/modules/crud
+
 # Trombine config
 trombine.title=Trombine rocks
 trombine.baseline=What baseline??
