--- a/conf/application.conf
+++ b/conf/application.conf
@@ -219,5 +219,5 @@ mail.smtp=mock
 module.crud=${play.path}/modules/crud
 
 # Trombine config
-trombine.title=Trombine rocks
-trombine.baseline=What baseline??
+trombine.title=Trombine app
+trombine.baseline=Who's who
